# rocm.rs

./: Cargo.toml  LICENSE  README.md  build.rs
docs/: README.md  architecture.md  build-and-validation.md  ffi-and-abi.md  module-breakdown.md
examples/: basic_gemm.rs
kernels/: gemm_multi.hip.cpp
scripts/: build_gemm_module.sh  run_gemm_smoke.sh
src/: context.rs  device.rs  error.rs  kernel.rs  lib.rs  logging.rs  memory.rs  stream.rs
src/ffi/: c_api.rs  mod.rs
src/ops/: gemm.rs  mod.rs
