[package]
name = "rocm_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal Rust interface scaffold for the ROCm HIP runtime."
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
logging = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
thiserror = "2.0.17"
tracing = { version = "0.1.41", optional = true, default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.20", optional = true, default-features = false, features = ["env-filter", "fmt", "std"] }
